sonar 代码优化